tests/nad_test_15/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: bond-testing
